@@ -10,7 +10,7 @@
 # 
 # Note: mode selection has implications on both behaviour and packaging!
 #
-#   modeqic     Endian 4i Connect / Exor JMConnect mode
+#   modeqcc     Endian ConnectClient / Exor JMConnect mode
 #   modeece     Endian Cloud Enabler mode
 #   modesece    Software Endian Cloud Enabler mode
 #
@@ -27,7 +27,7 @@
 
 # Local configuration overrides. Sample content:
 #     CONFIG += endian
-#     CONFIG += modeqic
+#     CONFIG += modeqcc
 LOCALCONFIG=$$(HOME)/.qmake.pri
 exists($${LOCALCONFIG}): include($${LOCALCONFIG})
 LOCALCONFIG=.qmake.pri
@@ -38,7 +38,7 @@ exists($${LOCALCONFIG}): include($${LOCALCONFIG})
 #
 PKGNAME = libencloud
 
-PRODUCT_4IC="4iConnect"
+PRODUCT_ECC="ConnectClient"
 PRODUCT_JMC="JMConnect"
 PRODUCT_ENCLOUD="Encloud"
 PRODUCT_SECE="SECE"  # FIXME
@@ -81,11 +81,11 @@ win32{
     DBG_SUFFIX =
 }
 
-modeqic {
-    DEFINES += LIBENCLOUD_MODE_QIC
+modeqcc {
+    DEFINES += LIBENCLOUD_MODE_QCC
     endian {
-        PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_4IC}
-        DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_4IC}\\\"
+        PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_ECC}
+        DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_ECC}\\\"
     } else {
         PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_JMC}
         DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_JMC}\\\"
@@ -99,7 +99,7 @@ modeqic {
     DEFINES += LIBENCLOUD_MODE_SECE
     DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_SECE}\\\"
 } else {
-    error("a mode must be defined (CONFIG += modeqic|modeece|modesece)!")
+    error("a mode must be defined (CONFIG += modeqcc|modeece|modesece)!")
 }
 
 nosetup     { DEFINES += LIBENCLOUD_DISABLE_SETUP }
