@@ -367,7 +367,7 @@ void VpnClient::enableTap()
 {
     // tap device enabled by default on unix and embedded platforms
 #ifdef Q_OS_WIN
-#ifdef LIBENCLOUD_MODE_QIC
+#ifdef LIBENCLOUD_MODE_QCC
     QString path = qgetenv("ProgramFiles") + "/" + LIBENCLOUD_PRODUCTDIR + "/bin/TapSetup.exe";
     QStringList args;
     QString out;
@@ -376,7 +376,7 @@ void VpnClient::enableTap()
 
     LIBENCLOUD_ERR_IF (utils::execute(path, args, out));
 err:
-#endif  // LIBENCLOUD_MODE_QIC
+#endif  // LIBENCLOUD_MODE_QCC
 #endif  // Q_OS_WIN
     return;
 }
@@ -385,7 +385,7 @@ void VpnClient::disableTap()
 {
     // tap device enabled by default on unix and embedded platforms
 #ifdef Q_OS_WIN
-#ifdef LIBENCLOUD_MODE_QIC  
+#ifdef LIBENCLOUD_MODE_QCC  
     QString path = qgetenv("ProgramFiles") + "/" + LIBENCLOUD_PRODUCTDIR + "/bin/TapSetup.exe";
     QStringList args;
     QString out;
@@ -395,7 +395,7 @@ void VpnClient::disableTap()
     // wait = false to speed up disconnect [CONNECT-115]
     LIBENCLOUD_ERR_IF (utils::execute(path, args, out, false));
 err:
-#endif  // LIBENCLOUD_MODE_QIC
+#endif  // LIBENCLOUD_MODE_QCC
 #endif  // Q_OS_WIN
     return;
 }
