@@ -2,20 +2,20 @@
 #include <QTimer>
 #include <common/common.h>
 #include <common/config.h>
-#include <setup/qic/qicsetup.h>
+#include <setup/qcc/qccsetup.h>
 
 // Login/Logout are unnecessary when using Basic Auth, and logout doesn't kick
 // out of VPN connection which is what we really would need
-//#define LIBENCLOUD_SETUP_QIC_WITH_LOGIN
+//#define LIBENCLOUD_SETUP_QCC_WITH_LOGIN
 
 namespace libencloud {
 
 /**
- * Unlike ECE/SECE Setup, the QIC Setup Module makes no automatic retries =>
+ * Unlike ECE/SECE Setup, the QCC Setup Module makes no automatic retries =>
  * errors are forwarded to user.
  */
 
-QicSetup::QicSetup (Config *cfg)
+QccSetup::QccSetup (Config *cfg)
     : SetupInterface(cfg)
 {
     LIBENCLOUD_TRACE;
@@ -34,7 +34,7 @@ QicSetup::QicSetup (Config *cfg)
     connect(&_setupMsg, SIGNAL(serverConfigSupply(QVariant)),
             this, SIGNAL(serverConfigSupply(QVariant)));
 
-#ifdef LIBENCLOUD_SETUP_QIC_WITH_LOGIN
+#ifdef LIBENCLOUD_SETUP_QCC_WITH_LOGIN
     _initMsg(_loginMsg);
     connect(&_loginMsg, SIGNAL(error(libencloud::Error)),
             this, SIGNAL(error(libencloud::Error)));
@@ -43,7 +43,7 @@ QicSetup::QicSetup (Config *cfg)
 #endif
 }
 
-int QicSetup::start ()
+int QccSetup::start ()
 {
     LIBENCLOUD_TRACE;
 
@@ -52,7 +52,7 @@ int QicSetup::start ()
     QVariantMap data;
     data["in"] = true;
 
-#ifdef LIBENCLOUD_SETUP_QIC_WITH_LOGIN
+#ifdef LIBENCLOUD_SETUP_QCC_WITH_LOGIN
     _loginMsg.setData(data);
     _loginMsg.process();
 #endif
@@ -66,7 +66,7 @@ int QicSetup::start ()
     return 0;
 }
 
-int QicSetup::stop ()
+int QccSetup::stop ()
 {
     LIBENCLOUD_TRACE;
 
@@ -77,7 +77,7 @@ int QicSetup::stop ()
     QVariantMap data;
     data["in"] = false;
 
-#ifdef LIBENCLOUD_SETUP_QIC_WITH_LOGIN
+#ifdef LIBENCLOUD_SETUP_QCC_WITH_LOGIN
     _loginMsg.setData(data);
     _loginMsg.process();
 #endif
@@ -85,17 +85,17 @@ int QicSetup::stop ()
     return 0;
 }
 
-const VpnConfig *QicSetup::getVpnConfig () const
+const VpnConfig *QccSetup::getVpnConfig () const
 {
     return _setupMsg.getVpnConfig();
 }
 
-const VpnConfig *QicSetup::getFallbackVpnConfig () const
+const VpnConfig *QccSetup::getFallbackVpnConfig () const
 {
     return _setupMsg.getFallbackVpnConfig();
 }
 
-int QicSetup::getTotalSteps() const
+int QccSetup::getTotalSteps() const
 {
     return StateLast - StateFirst + 1;
 }
@@ -104,7 +104,7 @@ int QicSetup::getTotalSteps() const
 // private slots
 //
 
-void QicSetup::_onProcessed ()
+void QccSetup::_onProcessed ()
 {
     LIBENCLOUD_TRACE;
 
@@ -118,7 +118,7 @@ void QicSetup::_onProcessed ()
 // private methods
 //
 
-int QicSetup::_initMsg (MessageInterface &msg)
+int QccSetup::_initMsg (MessageInterface &msg)
 {
     msg.setConfig(_cfg);
 
@@ -126,7 +126,7 @@ int QicSetup::_initMsg (MessageInterface &msg)
 }
 
 // Clear all generated data
-void QicSetup::_clear ()
+void QccSetup::_clear ()
 {
     if (QFile::exists(_cfg->config.sslOp.caPath.absoluteFilePath()))
         LIBENCLOUD_ERR_IF (!QFile::remove(_cfg->config.sslOp.caPath.absoluteFilePath()));
