@@ -4,7 +4,7 @@
 #include <common/common.h>
 #include <common/config.h>
 #include <common/utils.h>
-#include <setup/qic/setupmsg.h>
+#include <setup/qcc/setupmsg.h>
 
 // use only to wrap upper-level methods, otherwise duplicates will be emitted
 #define EMIT_ERROR_ERR_IF(cond) \
@@ -80,12 +80,12 @@ int SetupMsg::process ()
     LIBENCLOUD_ERR_IF ((_client = new Client) == NULL);
     
     url.setUrl(_sbAuth.getUrl());
-    url.setPath(LIBENCLOUD_SETUP_QIC_CONFIG_URL);
+    url.setPath(LIBENCLOUD_SETUP_QCC_CONFIG_URL);
 
     LIBENCLOUD_DBG("url: " << url);
 
     // Switchboard is strict on this
-    headers["User-Agent"] = LIBENCLOUD_USERAGENT_QIC;
+    headers["User-Agent"] = LIBENCLOUD_USERAGENT_QCC;
     headers["Authorization"] =  headerData.toLocal8Bit();
 
     // Initialization CA cert verification
@@ -190,7 +190,7 @@ int SetupMsg::_decodeResponse (const QString &response)
             json["openvpn_cert"].isNull(),
             error(Error(tr("Error parsing SB configuration"))));
 
-    // most fields not used locally (retrieved by QIC via API)
+    // most fields not used locally (retrieved by QCC via API)
     // for now we're only interested in VPN configuration,
     _vpnConfig = VpnConfig(json["openvpn_conf"].toString(), _cfg);
     LIBENCLOUD_EMIT_ERR_IF (!_vpnConfig.isValid(),
